Add datetime picker plugin, edit ui web.

--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
             "App\\": "app/"
         },
         "files": [
-            "helpers/view.php"
+            "helpers/view.php",
+            "helpers/datetime.php"
         ]
     },
     "autoload-dev": {
